--- a/web_dev/tasks/templates/tasks/add.html
+++ b/web_dev/tasks/templates/tasks/add.html
@@ -5,6 +5,14 @@
     <title>Title</title>
 </head>
 <body>
+<form action="{% url 'add'%}" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit">
+
+</form>
+    
+    <h3><a href="{% url 'home'%}">View tasks</a></h3>
 
 </body>
 </html>
