--- a/web_dev/flight/templates/flight/index.html
+++ b/web_dev/flight/templates/flight/index.html
@@ -3,7 +3,7 @@
     <h1> Flights </h1>
     <ul>
         {% for flight in flights %}
-            <li> Flight - {{flight.id }} => {{flight.origin}} to {{flight.destion}} </li>
+            <li> Flight - {{flight.id }} => {{flight.origin}} to {{flight.destination}} </li>
          {% empty %}
             <li> no flights </li>
         {% endfor %}
