This is my tenth commit, in this I've added passenger model which represent passengers for different flights, I've given Many-to-Many relational mapping between passengers and flight so that we can see passengers name in a given flight

--- a/web_dev/flight/templates/flight/flight_det.html
+++ b/web_dev/flight/templates/flight/flight_det.html
@@ -9,4 +9,14 @@
             <li>duration:{{ flight_det.duration}}</li>
         </ul>
     </h1>
+    <h1>
+        Passengers
+        <ul>
+            {% for passenger in passengers %}
+                <li>{{ passenger.first_name }} {{ passenger.last_name }}</li>
+            {% empty %}
+                <li>No passenger</li>
+            {% endfor %}
+        </ul>
+    </h1>
 {% endblock %}
